--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,8 @@
         </dependency>
         <!--로그 추가-->
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.hibernate.orm</groupId>
