--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
             <artifactId>aws-sdk-java</artifactId>
             <version>2.30.21</version>
         </dependency>
+        <!--   JSON     -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
